internal-tls.yml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "demo-peer-authentication"
  namespace: demo-istio
spec:
  mtls:
    mode: STRICT
